@@ -3,6 +3,8 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- some search dialog problems
+- choose directory dialog needs some work
 - kill ring obviously broken
 - odd bug: delete so that bracket match appears, also subr 2 to 1
 - print & markTokens()
@@ -219,7 +221,6 @@ and quirks that I need to fix eventually.
   - scroll/physUp/Down() simpler
 - inserting lines repaints whole text area
 - see if getLineOfOffset() can be optimized
-- resizeColumnsAppropriately() kills performance!
 
 jEdit buffer local properties:
 :wrap=hard:maxLineLen=72:indentSize=2:
